# ie

./: pyproject.toml  requirements.txt
nlp/engines/: __init__.py  engine.py
nlp/engines/named_entity_recognition/: engine.py  output.py
nlp/inference/: __init__.py
nlp/inference/named_entity_recognition/: __init__.py  engine.py
nlp/labels/named_entity_recognition/: korean_corpus.py
nlp/optimizer/: __main__.py
nlp/train/named_entity_recognition/: __main__.py  data_model.py  dataset.py  metric.py  preprocessor.py  trainer.py
nlp/train/relation_extraction/: data_model.py  dataset.py
nlp/utils/: io.py
scripts/: optimize_ner_model.sh  preprocess_ner_dataset.sh  run_ner_preprocess.sh  run_ner_trainer.sh  train_ner_model.sh
tests/: test_inference.py  test_luie.py  test_ner_inference.py
